Add manual aeron gateway driver